<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.sebastiankirsch.spring</groupId>
	<artifactId>environment-resolver-reactor</artifactId>
	<version>0.3.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Reactor project for the EnvironmentVariablesProtocolResolver</name>
	<description>Reactor project for the EnvironmentVariablesProtocolResolver</description>

	<developers>
		<developer>
			<name>Sebastian Kirsch</name>
			<url>https://github.com/sebastiankirsch</url>
		</developer>
	</developers>
	<inceptionYear>2024</inceptionYear>
	<licenses>
		<license>
			<name>Apache License Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<scm child.scm.connection.inherit.append.path="false">
		<connection>scm:git:https://github.com/sebastiankirsch/spring-environment-resolver.git</connection>
		<url>https://github.com/sebastiankirsch/spring-environment-resolver</url>
	  <tag>HEAD</tag>
  </scm>
	<url>https://github.com/sebastiankirsch/spring-environment-resolver</url>

	<properties>
		<maven.compiler.release>17</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<!-- plugin configuration -->
		<plugins.jar.phase>none</plugins.jar.phase>
		<plugins.javadoc.goal>javadoc-no-fork</plugins.javadoc.goal>
		<plugins.javadoc-aggregate-jar.phase>none</plugins.javadoc-aggregate-jar.phase>
		<plugins.source.phase>none</plugins.source.phase>

		<version.spring-framework>6.1.8</version.spring-framework>
	</properties>

	<modules>
		<module>environment-resolver</module>
		<module>spring-boot-starter</module>
	</modules>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.13.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>3.1.2</version>
					<executions>
						<execution>
							<id>default-install</id>
							<phase>none</phase>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.4.1</version>
					<executions>
						<execution>
							<id>default-jar</id>
							<phase>${plugins.jar.phase}</phase>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.6.3</version>
					<executions>
						<execution>
							<id>javadoc</id>
							<goals>
								<goal>${plugins.javadoc.goal}</goal>
							</goals>
							<phase>package</phase>
							<configuration>
								<reportOutputDirectory>${project.build.directory}/apidocs</reportOutputDirectory>
							</configuration>
						</execution>
					</executions>
					<configuration>
						<level>package</level>
						<links>
							<link>https://docs.spring.io/spring-framework/docs/6.1.x/javadoc-api/</link>
						</links>
						<show>package</show>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>3.0.1</version>
					<configuration>
						<arguments>-ntp</arguments>
						<autoVersionSubmodules>true</autoVersionSubmodules>
						<projectVersionPolicyId>SemVerVersionPolicy</projectVersionPolicyId>
						<releaseProfiles>release</releaseProfiles>
						<scmCommentPrefix />
						<scmDevelopmentCommitComment>Update to next version</scmDevelopmentCommitComment>
						<scmReleaseCommitComment>Release @{releaseLabel}</scmReleaseCommitComment>
						<tagNameFormat>v@{project.version}</tagNameFormat>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.3.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.3.1</version>
					<executions>
						<execution>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
							<phase>${plugins.source.phase}</phase>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.2.5</version>
					<configuration>
						<argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<inherited>false</inherited>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>javadoc</id>
						<phase>none</phase>
					</execution>
					<execution>
						<id>aggregated-jar</id>
						<goals>
							<goal>aggregate-jar</goal>
						</goals>
						<phase>${plugins.javadoc-aggregate-jar.phase}</phase>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>environment-resolver</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.stefanbirkner</groupId>
				<artifactId>system-lambda</artifactId>
				<version>1.2.1</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>5.10.2</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-core</artifactId>
				<version>${version.spring-framework}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${version.spring-framework}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<profiles>
		<profile>
			<id>release</id>
			<properties>
				<plugins.jar.phase>package</plugins.jar.phase>
				<plugins.javadoc.goal>jar</plugins.javadoc.goal>
				<plugins.javadoc-aggregate-jar.phase>package</plugins.javadoc-aggregate-jar.phase>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
					</plugin>
					<plugin>
						<groupId>org.sonatype.central</groupId>
						<artifactId>central-publishing-maven-plugin</artifactId>
						<version>0.4.0</version>
						<extensions>true</extensions>
						<configuration>
							<autoPublish>true</autoPublish>
							<deploymentName>Release ${project.version}</deploymentName>
							<publishingServerId>sonatype-central</publishingServerId>
							<tokenAuth>true</tokenAuth>
							<waitUntil>published</waitUntil>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>